--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=Nestor23
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#CONFIGURACION DE UN USUARIO ESTATICO
+spring.security.user.name = hb-oswaldo
+spring.security.user.password = hola
+
